# articles_shorts_backend

./: .gitignore  check_dims.py  manage.py  pyproject.toml  server_log.txt
accounts/: models.py  serializers.py  storage.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_interested_categories_user_preference_vector.py  0003_user_cf_latent_vector.py  0004_alter_user_profile_img.py  0005_user_is_pass_verified_alter_user_profile_img.py
fixtures/: categories.json  convert_image_format.py  generate_fixtures.py  users.json
njjc/: asgi.py  settings.py  urls.py  wsgi.py
posts/: bedrock_client.py  models.py  opensearch_client.py  recommendations.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
posts/management/commands/: backfill_embeddings.py  index_all_to_opensearch.py  run_recsys_training.py
posts/migrations/: 0001_initial.py  0002_post_embedding.py  0003_userinteraction.py  0004_post_cf_latent_vector.py  0005_alter_userinteraction_interaction_type.py  0006_post_is_reported_and_more.py  0007_report.py  0008_remove_post_is_reported.py
